--- a/Day1/package.json
+++ b/Day1/package.json
@@ -1,18 +1,20 @@
 {
   "dependencies": {
-    "express": "4.17"
+    "express": "4.17",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "eslint": "6.8",
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
-    "eslint-config-trybe-backend": "1.0"
+    "eslint": "6.8"
   },
   "name": "day1",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "eslint-config-trybe-backend": "1.0",
+    "bmi": "node src/exercicios/bmi.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
